--- a/interfaces/blofeld-ng/templates/list_songs.tmpl
+++ b/interfaces/blofeld-ng/templates/list_songs.tmpl
@@ -5,9 +5,10 @@
                                     <th class="status ui-corner-left"></th>
                                     <th class="track-number">#</th>
                                     <th class="title">Title</th>
-                                    <th class="genre">Genre</th>
                                     <th class="artist">Artist</th>
                                     <th class="album">Album</th>
+                                    <th class="genre">Genre</th>
+                                    <th class="year">Year</th>
                                     <th class="time ui-corner-right">Time</th>
                                 </tr>
                             </thead>
@@ -17,9 +18,10 @@
                                     <td class="status ui-corner-left"><div class="status-icon"></div></td>
                                     <td class="track-number">#try#$song['tracknumber']#except# #end try#</td>
                                     <td class="title">#try#$song['title']#except#Unknown Title#end try#</td>
-                                    <td class="genre">#try##echo ', '.join($song['genre'])##except# #end try#</td>
                                     <td class="artist">#try#$song['artist']#except#Unknown Artist#end try#</td>
                                     <td class="album">#try#$song['album']#except#Unknown Album#end try#</td>
+                                    <td class="genre">#try##echo ', '.join($song['genre'])##except# #end try#</td>
+                                    <td class="year">#try##echo $song['date'][:4] ##except# #end try#</td>
                                     <td class="time ui-corner-right">#try#
                                     #echo '%d:%02d' % ($song['length'] / 60, $song['length'] % 60)#
                                     #except# 
