Makes overflowing 'now playing' text ellipsize

--- a/interfaces/blofeld-ng/templates/index.tmpl
+++ b/interfaces/blofeld-ng/templates/index.tmpl
@@ -58,7 +58,14 @@
             <script type="text/javascript" src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
             <div id="switcher"></div>
         </div>
-        <div id="footer"></div>
+        <div id="footer">
+<!--            <div id="footer-widget" class="ui-widget ui-widget-content ui-corner-all">-->
+<!--                <label for="repeat-button">Repeat</label>-->
+<!--                <input id="repeat-button" type="checkbox"></input>-->
+<!--                <label for="shuffle-button">Shuffle</label>-->
+<!--                <input id="shuffle-button" type="checkbox"></input>-->
+<!--            </div>-->
+        </div>
         <div id="player"></div>
     </body>
 </html>
