--- a/interfaces/blofeld-ng/templates/static/css/blofeld.css
+++ b/interfaces/blofeld-ng/templates/static/css/blofeld.css
@@ -164,6 +164,11 @@ img.loading {
     font-weight: bold;
 }
 
+#np_title, #np_artist, #np_alubm {}
+    overflow: hidden;
+    text-overflow: ellipsize;
+}
+
 #find {
     float: right;
     margin: 6px 0;
