--- a/interfaces/blofeld-ng/templates/list_albums.tmpl
+++ b/interfaces/blofeld-ng/templates/list_albums.tmpl
@@ -1,7 +1,7 @@
                     <div class="scrollingContainer">
                         <table id="albums">
-                            <thead class="ui-widget-header">
-                                <tr>
+                            <thead class="ui-widget-header ui-corner-all">
+                                <tr class="ui-corner-all">
                                     <th class="ui-corner-all">Albums</th>
                                 </tr>
                             </thead>
