Adds a progress bar for loading

--- a/interfaces/blofeld-ng/templates/index.tmpl
+++ b/interfaces/blofeld-ng/templates/index.tmpl
@@ -14,7 +14,9 @@
     </head>
     <body class="ui-state-default">
         <div id="splash-bg" class="splash-screen"></div>
-        <div id="splash-text" class="splash-screen"></div>
+        <div id="splash-text" class="splash-screen">
+            <div id="loading-progress"></div>
+        </div>
         <div id="header">
             <div id="header-widget" class="ui-widget ui-widget-content ui-corner-all">
 <!--                <div id="logo">-->
