--- a/interfaces/blofeld-ng/templates/static/css/blofeld.css
+++ b/interfaces/blofeld-ng/templates/static/css/blofeld.css
@@ -4,7 +4,7 @@ html, html body {
 }
 
 #splash-bg {
-    background: black;
+    background: inherit;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -27,6 +27,10 @@ html, html body {
 #loading-progress {
     height: 10px;
     margin-top: 70px;
+    text-align: center;
+    font-size: 10px;
+    color: white;
+    font-family: sans-serif;
 }
 
 
