Adds shuffle functionality
The logic for this along with the repeat functionality hurt my head.

--- a/interfaces/blofeld-ng/templates/index.tmpl
+++ b/interfaces/blofeld-ng/templates/index.tmpl
@@ -30,8 +30,8 @@
                     
                     <label for="repeat-button">Repeat</label>
                     <input id="repeat-button" type="checkbox"></input>
-<!--                    <label for="shuffle-button">Shuffle</label>-->
-<!--                    <input id="shuffle-button" type="checkbox"></input>-->
+                    <label for="shuffle-button">Shuffle</label>
+                    <input id="shuffle-button" type="checkbox"></input>
                 </div>
                 <div id="progress">
                     <div id="progress-bar"></div>
@@ -67,6 +67,7 @@
         <div id="sidebar">
             <script type="text/javascript" src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
             <div id="switcher"></div>
+            <div id="debug-output"></div>
         </div>
         <div id="footer">
 <!--            <div id="footer-widget" class="ui-widget ui-widget-content ui-corner-all">-->
