--- a/interfaces/blofeld-ng/templates/index.tmpl
+++ b/interfaces/blofeld-ng/templates/index.tmpl
@@ -27,11 +27,11 @@
                     <button id="play">play</button>
                     <button id="pause">pause</button>
                     <button id="skip_forward">next</button>
-                    
+                
                     <label for="repeat-button">Repeat</label>
-                    <input id="repeat-button" type="checkbox"></input>
+                    <input id="repeat-button" type="checkbox">
                     <label for="shuffle-button">Shuffle</label>
-                    <input id="shuffle-button" type="checkbox"></input>
+                    <input id="shuffle-button" type="checkbox">
                 </div>
                 <div id="progress">
                     <div id="progress-bar"></div>
@@ -67,7 +67,18 @@
         <div id="sidebar">
             <script type="text/javascript" src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
             <div id="switcher"></div>
-            <div id="debug-output"></div>
+            
+            <div id="bitrate"></div>
+            <span id="amount">320</span>kbps
+<!--            <select name="bitrate" id="bitrate">-->
+<!--                <option value="320">320kbps</option>-->
+<!--                <option value="256">256kbps</option>-->
+<!--                <option value="192">192kbps</option>-->
+<!--                <option value="160">160kbps</option>-->
+<!--                <option value="128">128kbps</option>-->
+<!--                <option value="96">96kbps</option>-->
+<!--                <option value="64">64kbps</option>-->
+<!--            </select>-->
         </div>
         <div id="footer">
 <!--            <div id="footer-widget" class="ui-widget ui-widget-content ui-corner-all">-->
