Fix bitrate slider width

--- a/interfaces/blofeld-ng/templates/index.tmpl
+++ b/interfaces/blofeld-ng/templates/index.tmpl
@@ -62,7 +62,9 @@
         <div id="sidebar">
             <script type="text/javascript" src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
             <div id="switcher"></div>
-            <div id="bitrate"></div>
+            <div id="bitrate">
+                <div id="bitrate-slider"></div>
+            </div>
             <span id="amount">320</span>kbps
         </div>
         <div id="footer"></div>
