Adds a download button

--- a/interfaces/blofeld-ng/templates/index.tmpl
+++ b/interfaces/blofeld-ng/templates/index.tmpl
@@ -84,6 +84,11 @@
                         </tr>
                         <tr>
                             <td class="ui-corner-all">
+                                <button id="download-button">Download</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="ui-corner-all">
                                 <div id="switcher"></div>
                             </td>
                         </tr>
