--- a/interfaces/blofeld-ng/templates/static/css/blofeld.css
+++ b/interfaces/blofeld-ng/templates/static/css/blofeld.css
@@ -206,6 +206,18 @@ td, th {
     background: red;
 }
 
-#jplayer {
+#jplayer, #browser {
     background-color: inherit;
+}
+
+.ui-layout-resizer {
+    background-color: inherit;
+    z-index: 100;
+}
+
+.ui-layout-resizer-dragging {
+    filter:alpha(opacity=50);
+    -moz-opacity:0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5;
 }
