Sidebar and resizer cleanup

--- a/interfaces/blofeld-ng/templates/index.tmpl
+++ b/interfaces/blofeld-ng/templates/index.tmpl
@@ -63,37 +63,39 @@
             <div id="albums-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
         </div>
         <div id="songs-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
-        <div id="sidebar" class="table-container ui-widget ui-widget-content ui-corner-left">
-            <div class="scrolling-container">
-                <table id="options">
-                    <thead class="ui-widget-header">
-                        <tr>
-                            <th class="ui-corner-all">Options</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="ui-corner-all" id="bitrate-container">
-                                <div id="bitrate-slider"></div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="ui-corner-all">
-                                <span id="amount">320</span>kbps
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="ui-corner-all">
-                                <button id="download-button">Download</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="ui-corner-all">
-                                <div id="switcher"></div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+        <div id="sidebar" class="table-container">
+            <div id="sidebar-widget" class="ui-widget ui-widget-content ui-corner-left">
+                <div class="scrolling-container">
+                    <table id="options">
+                        <thead class="ui-widget-header">
+                            <tr>
+                                <th class="ui-corner-all">Options</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="ui-corner-all" id="bitrate-container">
+                                    <div id="bitrate-slider"></div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="ui-corner-all">
+                                    <span id="amount">320</span>kbps
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="ui-corner-all">
+                                    <button id="download-button">Download</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="ui-corner-all">
+                                    <div id="switcher"></div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
         <div id="footer">
