Adds large cover art view

--- a/interfaces/blofeld-ng/templates/index.tmpl
+++ b/interfaces/blofeld-ng/templates/index.tmpl
@@ -36,7 +36,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <div  id="cover-art">
+                                <div id="cover-art">
                                     <img class="cover-img active" src="" width="32" height="32">
                                     <img class="cover-img inactive" src="" width="32" height="32">
                                 </div>
@@ -101,5 +101,11 @@
         <div id="footer">
         </div>
         <div id="jplayer"></div>
+        <div id="cover-art-dialog">
+            <div class="cover-art-dialog-wrapper">
+                <span id="cover-art-loading-text">Loading</span>
+                <img src="">
+            </div>
+        </div>
     </body>
 </html>
